# basic-yew-site

./: .dockerignore  Dockerfile  README.md  build.sh
server/: Cargo.toml  build.rs
server/src/: fetch_time.rs  generated.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
yew/: .gitignore  Cargo.toml  index.html
yew/src/: main.rs
