[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]

actix-web = "^3.0"
actix-web-static-files = "3.0.5"
serde = "*"
serde_json = "*"
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
shared = { path = "../shared" }

[build-dependencies]

actix-web-static-files = "3.0.5"